# snake

./: Cargo.toml  README.md
src/: app.rs  colors.rs  direction.rs  game.rs  input.rs  main.rs  snake.rs  square.rs
