[package]
name = "snake"
version = "0.1.0"
authors = ["laura"]
edition = "2018"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.39.0"
pistoncore-glutin_window = "0.68.0"
piston2d-opengl_graphics = "0.77.0"
rand = "0.8.3"
